Layout changes and mobile fix

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             font-family: 'Lato', sans-serif;
         }
 
+        .app-header {
+            line-height: 1;
+        }
+
         .button {
             background-color: #ec0000;
             border-color: transparent;
@@ -24,50 +28,70 @@
         a:hover {
             color: #ea0000
         }
+
+.section {
+    padding: 1.5rem 1.5rem;
+}
+
     </style>
 </head>
+
 <body>
     <section class="section">
-        <div class="columns is-mobile">
-            <div class="column is-half is-offset-one-quarter">
-                <div class="content">
-                    <p class="is-size-1">
-                        <a href="/"><img src="andreas.png" class="alt-logo" alt="Gemeente Amsterdam">
-                        Afval Info <strong>Amsterdam</strong></a>
-                    </p>
-                    <div id="search-container">
-                        <div class="control">
-                            <p class="is-size-4">
-                                Zoek op straat/postcode + huisnummer
-                            </p>
-                            <div class="field is-grouped">
-                                <p class="control is-expanded">
-                                    <input id="searchinput" spellcheck="false" class="input is-large" placeholder="Bijv. 'Amstel 1'">
-                                </p>
-                                <p class="control">
-                                    <button class="button is-large" onclick="geoFindMe()">
-                                        <span class="icon is-small">
-                                            <i class="fas fa-location-arrow"></i>
-                                        </span>
-                                    </button>
-                                </p>
-                            </div>
-                        </div>
-                        <div id="searchlist" class="is-size-4">
-                        </div>
+        <div class="columns">
+            <div class="column is-one-quarter"></div>
+            <div class="column">
+                <div class="level is-mobile">
+                    <div class="level-left">
+                        <p class="is-size-2 app-header">
+                            <a href="/">
+                                Afval Info
+                                <br>
+                                <strong>Amsterdam</strong>
+                        </p>
                     </div>
-                    <div id="result-container">
-                        <h1 id="result-header"></h1>
-                        <p id="result-huisvuil" class="is-size-4"></p>
-                        <p id="result-huisvuil-opmerking" class="is-size-5"></p>
-                        <p id="result-grofvuil" class="is-size-4"></p>
-                        <p id="result-grofvuil-opmerking" class="is-size-5"></p>
-
+                    <div class="level-right">
+                        <img src="andreas.png" class="alt-logo" alt="Gemeente Amsterdam">
+                        </a>
                     </div>
                 </div>
+
+                <div id="search-container">
+                    <div class="control">
+                        <p class="is-size-4">
+                            Zoek op straat/postcode + huisnummer
+                        </p>
+                        <div class="field is-grouped">
+                            <p class="control is-expanded">
+                                <input id="searchinput" spellcheck="false" class="input is-large" placeholder="Bijv. 'Amstel 1'">
+                            </p>
+                            <p class="control">
+                                <button class="button is-large" onclick="geoFindMe()">
+                                    <span class="icon is-small">
+                                        <i class="fas fa-location-arrow"></i>
+                                    </span>
+                                </button>
+                            </p>
+                        </div>
+                    </div>
+                    <div id="searchlist" class="is-size-5">
+                    </div>
+                </div>
+                <div id="result-container" class="content">
+                    <h1 id="result-header"></h1>
+                    <p class="is-size-4"></p>
+                    <p id="result-huisvuil" class="is-size-4"></p>
+                    <p id="result-huisvuil-opmerking" class="is-size-5"></p>
+                    <p id="result-grofvuil" class="is-size-4"></p>
+                    <p id="result-grofvuil-opmerking" class="is-size-5"></p>
+
+                </div>
             </div>
+            <div class="column is-one-quarter"></div>
+
         </div>
     </section>
 </body>
 <script src="app.js"></script>
+
 </html>
