--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
 
         </div>
     </section>
+    <footer class="footer">
+            <div class="container">
+              <div class="content has-text-centered">
+                <p>
+                  Dit is een hobbyproject. Zie <a href="https://www.amsterdam.nl/afval/">de website van Amsterdam</a> voor officiële informatie.
+                </p>
+              </div>
+            </div>
+          </footer>
 </body>
 <script src="app.js"></script>
 
