Added absolute dimensions logo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="level-left">
                         <a href="/">
                             <p class="is-size-2 app-header">
-                        <img src="andreas.png" class="alt-logo" alt="Gemeente Amsterdam">
+                        <img src="andreas.png" height="99" width="39" class="alt-logo" alt="Gemeente Amsterdam">
                                 Afval Info
                                 <strong>Amsterdam</strong>
                         </p>
