--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
                 <div class="level is-mobile">
                     <div class="level-left">
                         <a href="/">
-                            <p class="is-size-2 app-header">
-                                <img src="andreas.png" height="99" width="39" class="logo" alt="Gemeente Amsterdam"> Afval Info
-                                <strong>Amsterdam</strong>
-                            </p>
-                    </div>
-                    <div class="level-right">
+                            <img src="andreas.png" height="99" width="39" class="logo" alt="Gemeente Amsterdam">
+                            
+                        </div>
+                        <div class="level-right">
+                                <p class="is-size-2 app-header">
+                                        Afval Info<br>
+                                        <strong>Amsterdam</strong>
+                                    </p>
                         </a>
                     </div>
                 </div>
@@ -88,7 +90,7 @@
                     <div id="searchlist" class="is-size-5">
                     </div>
                 </div>
-                <div id="result-container" class="content">
+                <div id="result-container" class="content" style="height: 1000px">
                     <h1 id="result-header"></h1>
                     <p class="is-size-4"></p>
                     <p id="result-huisvuil" class="is-size-4"></p>
