Added javascript type to script tag for ie?

--- a/index.html
+++ b/index.html
@@ -115,6 +115,6 @@
         </div>
     </footer>
 </body>
-<script src="app.js"></script>
+<script src="app.js" type="application/javascript"></script>
 
 </html>
