IE searchparams polyfill

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         </div>
     </footer>
 </body>
+<script src="url-search-params.js" type="application/javascript"></script>
 <script src="app.js" type="application/javascript"></script>
 
 </html>
