--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
         </div>
     </footer>
 </body>
-<script src="url-search-params.js" type="application/javascript"></script>
-<script src="app.js" type="application/javascript"></script>
+<script src="app.js"></script>
 
 </html>
